# opseclint

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  action.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  coverage_request.yml
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml
data/: knowledge-macos.json  knowledge-windows.json  knowledge.json
docs/design/: rule-logic-evaluator.md
examples/: defense-evasion.sh  macos-postex.sh  persistence.sh  recon.sh  windows-postex.ps1
src/: analyzer.rs  coverage.rs  kb.rs  main.rs  model.rs  parser.rs  report.rs  sarif.rs  sigma.rs  sigma_eval.rs  theme.rs
tests/fixtures/sigma/: lnx_reverse_shell.yml  lnx_shadow_access.yml  win_process_discovery.yml
