[package]
name = "opseclint"
version = "0.1.2"
edition = "2024"
description = "Detection-coverage analyzer for Linux/auditd, Windows/Sysmon, and macOS/Endpoint Security: resolve shell/command actions to ATT&CK techniques, the telemetry they emit, and the detections that would fire."
license = "MIT"
repository = "https://github.com/Gerrrt/opseclint"
homepage = "https://github.com/Gerrrt/opseclint"
readme = "README.md"
keywords = ["security", "detection", "attack", "sigma", "opsec"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/.github", "/docs", "/examples", "/tests/fixtures"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[[bin]]
name = "opseclint"
path = "src/main.rs"
